--- a/adv/composer.json
+++ b/adv/composer.json
@@ -20,7 +20,9 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "dmstr/yii2-adminlte-asset": "2.6.2",
         "almasaeed2010/adminlte": "2.4.8",
-        "cboden/ratchet": "^0.4.1"
+        "cboden/ratchet": "^0.4.1",
+        "yiisoft/yii2-imagine": "^2.1",
+        "mohorev/yii2-upload-behavior": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
