--- a/adv/composer.json
+++ b/adv/composer.json
@@ -22,7 +22,8 @@
         "almasaeed2010/adminlte": "2.4.8",
         "cboden/ratchet": "^0.4.1",
         "yiisoft/yii2-imagine": "^2.1",
-        "mohorev/yii2-upload-behavior": "*"
+        "mohorev/yii2-upload-behavior": "*",
+        "2amigos/yii2-date-picker-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
