--- a/adv/composer.json
+++ b/adv/composer.json
@@ -23,7 +23,7 @@
         "cboden/ratchet": "^0.4.1",
         "yiisoft/yii2-imagine": "^2.1",
         "mohorev/yii2-upload-behavior": "*",
-        "2amigos/yii2-date-picker-widget": "~1.0"
+        "kartik-v/yii2-date-range": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
