--- a/adv/composer.json
+++ b/adv/composer.json
@@ -26,7 +26,8 @@
         "kartik-v/yii2-date-range": "*",
         "la-haute-societe/yii2-save-relations-behavior": "*",
         "unclead/yii2-multiple-input": "~2.0",
-        "yii2mod/yii2-comments": "*"
+        "yii2mod/yii2-comments": "*",
+        "mdmsoft/yii2-admin": "~2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
